Updated with SQL for totals
- new files
- new sql statements

--- a/www/add_new_saving.html
+++ b/www/add_new_saving.html
@@ -3,6 +3,8 @@
 	<head>
 		<title>Add New Saving</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<!-- need to load this common javascript first as functions are being used by other javascripts -->
+		<script type="text/javascript" src="js/global.js"></script>		
 		<script type="text/javascript" src="lib/date.js"></script>
 		
 		<!--<script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>-->
@@ -65,7 +67,7 @@
 							<div class="ui-field-contain">
 								<select name="selRoyalty" id="selRoyalty" data-native-menu="false">
 									<option value="PCPLUS">PCPLUS</option>
-									<option value="51CheckOut">51CheckOut</option>
+									<option value="CheckOut51">CheckOut51</option>
 									<option value="Groupon Snap">Groupon Snap</option>
 								</select>
 							</div>
