Updated UTC using moment.js

--- a/www/index.html
+++ b/www/index.html
@@ -69,7 +69,7 @@
 				<table>
 					<tr>
 						<td>This Week:</td>
-						<td><span id="thisWeekSaving">Week Saving</span></td>
+						<td><span id="thisWeekSaving"></span></td>
 						<td></td>
 					</tr>
 					<tr>
