added view saving history page

--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -53,10 +53,12 @@
 							Summary
 							<input type="button" data-corners="false" data-enhanced="true" value="Summary"></input>
 						</div></td>
-						<td><div class="ui-btn ui-input-btn ui-shadow ui-corner-all ui-icon-bars ui-btn-icon-left">
+						<td><!--<div class="ui-btn ui-input-btn ui-shadow ui-corner-all ui-icon-bars ui-btn-icon-left">
 							History
 							<input type="button" data-corners="false" data-enhanced="true" value="History" id="btnViewHistory"></input>
-						</div></td>
+						</div>-->
+							<a href="view_saving_history.html" class="ui-btn ui-shadow ui-corner-all ui-icon-bars ui-btn-icon-left" data-transition="pop">History</a>
+						</td>
 						<td>
 							<a href="add_new_saving.html" class="ui-btn ui-shadow ui-corner-all ui-icon-plus ui-btn-icon-left" data-transition="pop">Saving</a>
 							<!--<a href="#popupAddNewSaving" data-rel="popup" data-position-to="window" class="ui-btn ui-corner-all ui-shadow ui-btn-inline ui-icon-plus ui-btn-icon-left ui-btn-a" data-transition="pop">Saving</a>-->
@@ -105,9 +107,7 @@
 				</table>
 			</div>
 			<hr>
-
 				<span id="savingHistory"></span>
-
 		</div><!-- /content -->
 		<div data-role="footer">
 			<h4><div class="ui-btn ui-input-btn ui-shadow ui-corner-all">
