--- a/platforms/android/assets/www/view_saving_history.html
+++ b/platforms/android/assets/www/view_saving_history.html
@@ -3,13 +3,18 @@
 	<head>
 		<title>View Saving History</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		
-		<!--<script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>-->
-		
-		<!--<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">-->
-		<!--<script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>-->
-
-    <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
+		<!-- need to load this common javascript first as functions are being used by other javascripts -->
+		<script type="text/javascript" src="js/global.js"></script>
+		<script type="text/javascript" src="lib/moment.min.js"></script>
+		<script type="text/javascript" src="lib/date.js"></script>
+		<script type="text/javascript" src="lib/jquery.formatCurrency-1.4.0.js"></script>
+		<!--
+		<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
+		<script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
+		<script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+		-->
+	
+	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
     <link rel="stylesheet" href="http://cdn.jtsage.com/datebox/1.4.5/jqm-datebox-1.4.5.min.css" />
 	<link type="text/css" href="http://cdn.jtsage.com/css/demos.css" rel="stylesheet" />
     <!-- NOTE: Script load order is significant! -->
@@ -32,10 +37,10 @@
     });
     </script>
 
-	<!--<script type="text/javascript" src="js/database.js"></script>-->
+	<script type="text/javascript" src="js/db_view_saving_history.js"></script>
 	
 	</head>
-	<body>
+	<body onload="onBodyLoad()">
 		<div data-role="page">
 		<div data-role="header" class="ui-btn ui-input-btn ui-shadow ui-corner-all">
 			<a href="#" class="ui-btn ui-input-btn ui-shadow ui-icon-arrow-l ui-corner-all ui-btn-icon-left" data-rel="back" id="btnGoBack">Go Back</a>
@@ -43,19 +48,110 @@
 		</div><!-- /header -->
 		<div data-role="content">
 			<div>
-				<table>
-					<tr>
-						<td>Saving Date</td>
-						<td>Amount</td>
-						<td>Product</td>
-						<td>Royalty</td>
-						<td>Place</td>
-						<td>Type</td>
-						<td>Created</td>
-					</tr>				
+				<table data-role="table" id="table-column-toggle" data-mode="columntoggle" class="ui-body-d ui-shadow table-stripe ui-responsive" data-column-btn-theme="b" data-column-btn-text="Columns to display..." data-column-popup-theme="a">
+					<thead>
+						<tr>
+							<th data-priority="1"><abbr title="Saving ID">ID</abbr></th>
+							<th data-priority="2"><abbr title="Saving Date">Date</abbr></th>
+							<th>Amount</th>
+							<th data-priority="2">Product</th>
+							<th data-priority="2">Royalty</th>
+							<th data-priority="2">Place</th>
+							<th data-priority="2">Type</th>
+							<th data-priority="3">Created</th>
+						</tr>
+					</thead>
+					<tbody>
+
+					</tbody>
 				</table>
-				<span id="savingHistory"></span>				
+		
 			</div>
+			
+
+<table data-role="table" id="table-custom-2" data-mode="columntoggle" class="ui-body-d ui-shadow table-stripe ui-responsive" data-column-btn-theme="b" data-column-btn-text="Columns to display..." data-column-popup-theme="a">
+         <thead>
+           <tr class="ui-bar-d">
+             <th data-priority="2">Rank</th>
+             <th>Movie Title</th>
+             <th data-priority="3">Year</th>
+             <th data-priority="1"><abbr title="Rotten Tomato Rating">Rating</abbr></th>
+             <th data-priority="5">Reviews</th>
+           </tr>
+         </thead>
+         <tbody>
+           <tr>
+             <th>1</th>
+             <td><a href="http://en.wikipedia.org/wiki/Citizen_Kane" data-rel="external">Citizen Kane</a></td>
+             <td>1941</td>
+             <td>100%</td>
+             <td>74</td>
+           </tr>
+           <tr>
+             <th>2</th>
+             <td><a href="http://en.wikipedia.org/wiki/Casablanca_(film)" data-rel="external">Casablanca</a></td>
+             <td>1942</td>
+             <td>97%</td>
+             <td>64</td>
+           </tr>
+           <tr>
+             <th>3</th>
+             <td><a href="http://en.wikipedia.org/wiki/The_Godfather" data-rel="external">The Godfather</a></td>
+             <td>1972</td>
+             <td>97%</td>
+             <td>87</td>
+           </tr>
+           <tr>
+             <th>4</th>
+             <td><a href="http://en.wikipedia.org/wiki/Gone_with_the_Wind_(film)" data-rel="external">Gone with the Wind</a></td>
+             <td>1939</td>
+             <td>96%</td>
+             <td>87</td>
+           </tr>
+           <tr>
+             <th>5</th>
+             <td><a href="http://en.wikipedia.org/wiki/Lawrence_of_Arabia_(film)" data-rel="external">Lawrence of Arabia</a></td>
+             <td>1962</td>
+             <td>94%</td>
+             <td>87</td>
+           </tr>
+           <tr>
+             <th>6</th>
+             <td><a href="http://en.wikipedia.org/wiki/Dr._Strangelove" data-rel="external">Dr. Strangelove Or How I Learned to Stop Worrying and Love the Bomb</a></td>
+             <td>1964</td>
+             <td>92%</td>
+             <td>74</td>
+           </tr>
+           <tr>
+             <th>7</th>
+             <td><a href="http://en.wikipedia.org/wiki/The_Graduate" data-rel="external">The Graduate</a></td>
+             <td>1967</td>
+             <td>91%</td>
+             <td>122</td>
+           </tr>
+           <tr>
+             <th>8</th>
+             <td><a href="http://en.wikipedia.org/wiki/The_Wizard_of_Oz_(1939_film)" data-rel="external">The Wizard of Oz</a></td>
+             <td>1939</td>
+             <td>90%</td>
+             <td>72</td>
+           </tr>
+           <tr>
+             <th>9</th>
+             <td><a href="http://en.wikipedia.org/wiki/Singin%27_in_the_Rain" data-rel="external">Singin' in the Rain</a></td>
+             <td>1952</td>
+             <td>89%</td>
+             <td>85</td>
+           </tr>
+           <tr>
+             <th>10</th>
+             <td class="title"><a href="http://en.wikipedia.org/wiki/Inception" data-rel="external">Inception</a></td>
+             <td>2010</td>
+             <td>84%</td>
+             <td>78</td>
+           </tr>
+         </tbody>
+       </table>			
 		</div><!-- /content -->
 		<div data-role="footer">
 			<h4></h4>
