Added new feature for adding new lookup items
Dynamically create dropdown boxes for adding new saving using values
from database

--- a/platforms/android/assets/www/add_new_saving.html
+++ b/platforms/android/assets/www/add_new_saving.html
@@ -37,7 +37,15 @@
     </script>
 
 	<script type="text/javascript" src="js/db_add_new_saving.js"></script>
-	
+
+	<script>
+		$( "#btnSave" ).click( function() {
+			AddValueToDB();
+		});
+		
+		$( "#txtSavingDate" ).val(moment().format("MM/DD/YYYY"));
+	</script>	
+		
 	</head>
 	<body onload="onBodyLoad()">
 		<div data-role="page">
@@ -114,12 +122,6 @@
 			<h4></h4>
 		</div><!-- /footer -->
 		</div><!-- /page -->
-		
-		<script>
-			$( "#btnSave" ).click( function() {
-				AddValueToDB();
-			});	
-		</script>	
 		
 	</body>
 	
