Added feature for lookup table

--- a/platforms/android/assets/www/add_new_saving.html
+++ b/platforms/android/assets/www/add_new_saving.html
@@ -51,18 +51,21 @@
 					<tr>
 						<td>Date:</td>
 						<td><input name="txtSavingDate" id="txtSavingDate" type="text" data-role="datebox" data-options='{"mode":"datebox"}' /></td>
+						<td></td>
 					</tr>
 					<tr>
 						<td>Amount:</td>
 						<td><input data-clear-btn="true" name="txtAmount" id="txtAmount" value="" type="tel"></td>
+						<td></td>
 					</tr>
 					<tr>
 						<td>Product:</td>
 						<td><input name="txtProduct" id="txtProduct" value="" type="text"></td>
+						<td></td>
 					</tr>
 					<tr>
 						<td>
-							<a href="add_new_lookup_item.html?type=Royalty" class="ui-btn ui-input-btn ui-shadow ui-icon-plus ui-corner-all ui-btn-icon-right" id="btnAddNewRoyalty">Royalty: </a>
+							Royalty:
 						</td>
 						<td>
 							<div id="divRoyalty" class="ui-field-contain">
@@ -75,10 +78,13 @@
 							-->	
 							</div>
 						</td>
+						<td>
+							<a href="add_new_lookup_item.html?type=Royalty" class="ui-btn ui-icon-plus ui-btn-icon-notext ui-corner-all" id="btnAddNewRoyalty">Royalty: </a>
+						</td>
 					</tr>
 					<tr>
 						<td>
-							<a href="add_new_lookup_item.html?type=MarkPlace" class="ui-btn ui-input-btn ui-shadow ui-icon-plus ui-corner-all ui-btn-icon-right" id="btnAddNewMarketPlace">Market Place: </a>						
+							Market Place:					
 						</td>
 						<td>
 							<div id="divMarketPlace" class="ui-field-contain">
@@ -93,10 +99,13 @@
 							-->	
 							</div>
 						</td>
+						<td>
+							<a href="add_new_lookup_item.html?type=MarketPlace" class="ui-btn ui-icon-plus ui-btn-icon-notext ui-corner-all" id="btnAddNewMarketPlace">Market Place: </a>							
+						</td>
 					</tr>
 					<tr>
 						<td>
-							<a href="add_new_lookup_item.html?type=SavingType" class="ui-btn ui-input-btn ui-shadow ui-icon-plus ui-corner-all ui-btn-icon-right" id="btnAddNewSavingType">Saving Type: </a>
+							Saving Type:
 						</td>
 						<td>
 							<div id="divSavingType" class="ui-field-contain">
@@ -109,6 +118,9 @@
 							-->	
 							</div>
 						</td>
+						<td>
+						<a href="add_new_lookup_item.html?type=SavingType" class="ui-btn ui-icon-plus ui-btn-icon-notext ui-corner-all" id="btnAddNewSavingType">Saving Type: </a>
+						</td>
 					</tr>
 					<tr>
 						<td></td>
@@ -118,6 +130,7 @@
 						</div>
 						<!--<a href="index.html" class="ui-btn ui-shadow ui-corner-all" data-transition="pop" id="btnSave">Save</a>-->
 						</td>
+						<td></td>
 					</tr>					
 				</table>
 			</div>
