--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -49,10 +49,12 @@
 			<div align="center">
 				<table id="tblOverview" border="0">
 					<tr>
-						<td><div class="ui-btn ui-input-btn ui-shadow ui-corner-all">
-							Summary
+						<td><!--<div class="ui-btn ui-input-btn ui-shadow ui-corner-all">
+							Setup
 							<input type="button" data-corners="false" data-enhanced="true" value="Summary"></input>
-						</div></td>
+						</div>-->
+						<a href="view_lookup_item.html" class="ui-btn ui-shadow ui-corner-all ui-icon-bars ui-btn-icon-left" data-transition="pop">Settings</a>
+						</td>
 						<td><!--<div class="ui-btn ui-input-btn ui-shadow ui-corner-all ui-icon-bars ui-btn-icon-left">
 							History
 							<input type="button" data-corners="false" data-enhanced="true" value="History" id="btnViewHistory"></input>
